[project]
name = "sharecleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "pyarrow>=22.0.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
sharecleaner = "sharecleaner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
